--- a/lie_theory_and_jacobi_diagrams.tex
+++ b/lie_theory_and_jacobi_diagrams.tex
@@ -1131,25 +1131,37 @@ Finally, we note that for \(\mathfrak{sl}_{4}\) the arguments given above do not
 \section{A universal casimir Lie algebra object}
 \label{sec:a-universal-casimir-lie-algebra-object}
 
-We return to the universal Lie algebra of Vaintrob which was discussed in the previous section. It is yet uncertain to what degree such an algebra exists. The obstruction are the zero divisors in Vogel's algebra \(\Lambda\), \cite{can-yang-baxter-imply-lie-algebra, on-refined-vogels-universality, construction-of-lie-algebra-weight-system-kernel-via-vogel-algebra} give more details.
+We return to the universal Lie algebra of Vaintrob which was discussed in the previous section. 
+%TODO (Zsuzsi) Did you discuss this in the previous section? I recommend inserting a specific reference, like "Remark X.Y", or a reminder of what the goal is.
+It is yet uncertain 
+%TODO (Zsuzsi) "Yet uncertain" = "at this point in your thesis", or "at this point ion the history of mathematics"
+to what degree such an algebra exists. The obstruction are the zero divisors in Vogel's algebra \(\Lambda\), \cite{can-yang-baxter-imply-lie-algebra, on-refined-vogels-universality, construction-of-lie-algebra-weight-system-kernel-via-vogel-algebra} give more details.
+%TODO (Zsuzsi) As far as I can tell, you never mentioned $\Lambda$ before, so we don't know what it is or what it does. I think this sentence gives an unhelpful amount of detail: the reader thinks they're missing something, and starts flipping back to see where they missed it.
 
-There is, however, a theoretical construction of Hinnich-Vaintrob \cite{cyclic-operads-and-the-algebra-of-chord-diagrams}. They construct a Lie algebra object in a symmetric monoidal category with a weight system which is isomorphic to \(\mathcal{A}\). By constructing an algebra isomorphic to \(\mathcal{A}\), this guarantees that every Vassiliev invariant can be constructed from appling Construction \ref{cons:lie-algebra-weight-system} to some Lie algebra object in some symmetric monoidal category. However, it doesn't give any hints as to which symmetric monoidal category one needs to work with to construct a particular Vassiliev invariant. Thus it is useful theoretically, but not computationally. We review this construction of Hinich and Vaintrob. The purpose is that in Chapter \ref{ch:welded-knots-isometry-lie-algebras-and-arrow-diagrams}, we will generalise this construction from Vassiliev invariants of classical knots to those of welded long knots.
+There is, however, a theoretical construction of 
+Hinnich-Vaintrob \cite{cyclic-operads-and-the-algebra-of-chord-diagrams}: they construct a Lie algebra object in a symmetric monoidal category with a weight system which is isomorphic to \(\mathcal{A}\). This guarantees that every Vassiliev invariant can be constructed from applying Construction \ref{cons:lie-algebra-weight-system} to some Lie algebra object in some symmetric monoidal category. However, it doesn't give any hints as to which symmetric monoidal category one needs to work in to construct a particular Vassiliev invariant. Thus, it is useful theoretically, but not computationally. In this section we review the Hinic--Vaintrob construction, and in Chapter \ref{ch:welded-knots-isometry-lie-algebras-and-arrow-diagrams}, we will generalise it from Vassiliev invariants of classical knots to those of welded long knots.
 
-The operations on a set can always be composed by taking as input the output of another operation. These compositions alyways obey certain rules. If the set is a vector space, the operations too form a vector space. An operad captures this concept of operations on some object of a category abstractly.
+%TODO (Zsuzsi) This paragraph needs a stransition sentence at the beginning, something like: "An essetntial concept to the HV construction is that of an operad, which formally captures the general behaviour of associative operations in a range of abstract algebraic contexts."
+The operations on a set can always be composed by taking as input the output of another operation. These compositions always obey certain rules. If the set is a vector space, the operations too form a vector space. 
+%TODO (Zsuzsi) Any operations? I suggest: "For example, if the set is a vector space $V$, then linear maps on $V$ also form a vector space."
+An operad captures this concept of operations on some object of a category abstractly. 
+%TODO (Zsuzsi) Associative only. I would also avoid saying "on some object of a category" to avoid confusion, because below the objects in your category are sets of operations. You could instead say on an "algebraic stucture" or just "structure".
 
-\begin{warning}
-	For all of the below, we assume categories are \(k\)-linear, \(k\) a field of characteristic zero.
+\begin{warning} %TODO (Zsuzsi) Is this a warning, or just conventiuon?
+	For all of the below, we assume categories are \(k\)-linear, where \(k\) is a field of characteristic zero.
 \end{warning}
 
 \begin{definition}
 	\label{def:operad}
-	An \textbf{operad} \(\mathcal{O}\) in monoidal category \(\mathcal{C}\) consists of:
+	An \textbf{operad} \(\mathcal{O}\) in a monoidal category \(\mathcal{C}\) consists of:
 
 	\begin{itemize}
 		\item a collection of objects in \(\mathcal{C}\), \(\{\mathcal{O}(n)\}_{n \in \mathbb{N}}\), with \(\mathcal{O}(n)\) known as the \textbf{\(n\)-ary operations}
 		\item an element \(\id \in \mathcal{O}(1)\).
 		\item an action of the symmetric group \(S_{n}\) on each \(\mathcal{O}(n)\)
-		\item a series of composition morphisms: for each \(n\) and \(k_{1}, k_{2}, \cdots, k_{n} \in \mathbb{N}\)
+		\item a series of composition morphisms:
+        %TODO (Zsuzsi) bold "composition morphims"?
+        for each \(n\) and \(k_{1}, k_{2}, \cdots, k_{n} \in \mathbb{N}\)
 			\[
 				\begin{array}{rccc}
 					\circ_{n}:
@@ -1165,7 +1177,9 @@ The operations on a set can always be composed by taking as input the output of 
 	satisfying the following axioms. (Note: the axioms are listed for completeness, but won't be used heavily below.)
 		\begin{enumerate}
 			\item That for any \(\theta \in \mathcal{O}(n)\), \(\theta \circ_{n} (\id, \dots, \id) = \theta = \id \circ_{1} \theta\). (The \textbf{identity} axiom.)
-			\item \textbf{Associativity of composition}, that for \(\theta \in \mathcal{O}(n)\), and \(\theta_{1}\in \mathcal{O}(k_{1})\), \(\theta_{2} \in \mathcal{O}(k_{2})\), up to \(\theta_{n} \in \mathcal{O}(k_{n})\), that the two ways of forming the composition of the \(\theta_{i, j}\) into \(\theta_{i}\) into \(\theta\) are the same:
+			\item \textbf{Associativity of composition}, that for \(\theta \in \mathcal{O}(n)\), and \(\theta_{1}\in \mathcal{O}(k_{1})\), \(\theta_{2} \in \mathcal{O}(k_{2})\), up to \(\theta_{n} \in \mathcal{O}(k_{n})\), the two ways of forming the composition of the \(\theta_{i, j}\) into \(\theta_{i}\) into \(\theta\) 
+            %TODO (Zsuzsi) Confusing: you didn't introduce double indices above, but tehre are double indices here and in the formulas below. Switched from tensor to commas: tensor product or direct sum? If it's a tensor product, write $\otimes$ rather than $(,,,)$. (Or maybe I'd write it as a product if it must be shortened.)
+            are the same:
 				\[\theta \circ_{n} \Big( \theta_{1} \circ_{k_{1}} (\theta_{1, 1}, \dots, \theta_{1, k_{1}}), \dots, \theta_{n} \circ_{k_{n}} (\theta_{n, 1}, \dots, \theta_{n, k_{n}}) \Big)\]
 				is equal to
 				\[\big( \theta \circ_{n} (\theta_{1}, \dots, \theta_{n}) \big) \circ_{k_{1} + \cdots + k_{n}} (\theta_{1, 1}, \dots, \theta_{1, k_{n}}, \dots, \theta_{n, 1}, \dots, \theta_{n, k_{n}}).\]
@@ -1176,18 +1190,24 @@ The operations on a set can always be composed by taking as input the output of 
 				\[\theta \circ_{n} (\theta_{1}\sigma_{1}, \dots, \theta_{n} \sigma_{n}) = \big(\theta \circ_{n} (\theta_{1}, \dots, \theta_{n}) \big) (\sigma_{1} \connect \cdots \connect \sigma_{n})\]
 				where \((\sigma_{1} \connect \cdots \connect \sigma_{n}) \in S_{k_{1} + \cdots + k_{n}}\) is the block-wise permutation of block \(i\) by \(\sigma_{i}\).
 			\item That the action of the symmetric group agrees with its action in the symmetric monoidal category \(\mathcal{C}\).
+            %TODO (Zsuzsi) you didn't say above that $\mathcal{C}$ was symmetric
 		\end{enumerate}
 \end{definition}
 
 \begin{definition}
 	An \textbf{algebra \(A\) over the operad \(\mathcal{O}\) (in \(\mathcal{C}\))} is an object of \(\mathcal{C}\) satisfying certain natural compatibility conditions.
+    %TODO (Zsuzsi) This is not a definition: if it's in a definition environment, it should be defined. Otherwise, it should be just exposition (not in an environment). On the math: it's not $A$ that satisfies compatibility conditions, but the operations on $A$. At the very least one should write down these operations on $A$ (as maps $A\otimes A \otimes ...\otimes A \to A$), and then if you want to be informal, say that they behave as the "operations" in $\mathcal{O}$.
 \end{definition}
 
-In essence, an algebra over an operad is an object in \(\mathcal{C}\) whose operations obey the rules defined by \(\mathcal{O}\).
+In essence, an algebra over an operad is an object in \(\mathcal{C}\) whose operations obey the rules defined by \(\mathcal{O}\). 
+%TODO (Zsuzsi) This sentence could come before the formal definition.
 
 \begin{example}
 	\label{ex:lie-operad}
-	Let \(\Lambda\) denote the free operad functor (for details we refer the reader to \cite{operads-and-props}). Let
+	Let \(\Lambda\) denote the free operad functor (for details we refer the reader to \cite{operads-and-props}). 
+    %TODO (Zsuzsi) You can refer for details, but you should say something about what this is. From what category to what category? Intuitively, what is it?
+    %TODO (Zsuzsi) On further thought: Basically you're using generators and relations, which, if you want to be precise and technical, depends on three things: the Free functor, generation within an operad, and taking a quotient. You don't explain any of the three, and I agree that someone who knows some algebra can kindof imagine. I think it would be more reader friendly to own this and say that one can use generators and relations for operads, which work pretty much how one would expect, and then write it as generators and relations, like $\langle gens | rels\rangle$. Or, one can be precise, but then one should define the things.
+    Let
 	\[
 		\alpha
 		=
@@ -1236,17 +1256,26 @@ In essence, an algebra over an operad is an object in \(\mathcal{C}\) whose oper
 	\]
 \end{example}
 
-Recall that the goal is an algebra isomorphic to \(\mathcal{A}\). The first step is to create an object that encodes the internal structure of \(\mathcal{A}\), i.e. the \ref{eq:AS} and \ref{eq:IHX} relations, but not yet with a choice of representation or the \ref{eq:STU} relations. An important feature of \(\mathcal{A}\) that enabled the construction of Lie algebra weight systems was that contraction of tensors corresponding to the Lie bracket or metric/casimir elements was akin to joining parts of diagrams in \(\mathcal{A}\). So a contraction-like operation would be a good start.
 
-Composition in operads is something like contraction in a symmetric monoidal category, but with restictions on what can be contracted: only outputs with inputs. Furthermore, in an operad, no object has two outputs, for example there is no natural notion of tensor product in an operad.
 
-A step towards describing the internal structure of \(\mathcal{A}\) without specifying a Lie algebra is to allow multiple outputs, thereby considering not just operations but, for example in \(\mathcal{C} = \mathbf{Vect}\), general multilinear functions. Operads were abstractions of the operations on some object (say, \(A\)), i.e. morphisms \(A^{\otimes n} \to A\). Slightly more generally, props are abstractions of all maps \(A^{\otimes n} \to A^{\otimes m}\).
+Recall that the goal is an algebra isomorphic to \(\mathcal{A}\). 
+%TODO (Zsuzsi) The goal is more than that, like, an easier algebra isomorphic to $\mathcal{A}$ is $\mathcal{A}$... Really, the goal is a Lie algebra object in a monoidal category, whose universal enveloping algebra (in the appropriate sense) is isomorphic to $\mathcal A$.
+The first step is to create an object that encodes the internal structure of \(\mathcal{A}\), i.e. the \ref{eq:AS} and \ref{eq:IHX} relations, but not yet with a choice of representation or the \ref{eq:STU} relations. An important feature of \(\mathcal{A}\) that enabled the construction of Lie algebra weight systems was that contraction of tensors corresponding to the Lie bracket or metric/casimir elements was akin to joining parts of diagrams in \(\mathcal{A}\). So a contraction-like operation would be a good start.
+
+Composition in operads is something like contraction in a symmetric monoidal category, but with restictions on what can be contracted: only outputs with inputs. Furthermore, in an operad, every operation has exactly one output, and as a result there is no natural notion of tensor product in an operad.
+
+A step towards describing the internal structure of \(\mathcal{A}\) without specifying a Lie algebra is to allow multiple outputs, thereby considering not just operations but, for example in \(\mathcal{C} = \mathbf{Vect}\), general multilinear functions.
+%TODO (Zsuzsi) Multilinear functions have only one output?
+Operads were abstractions of the operations on some object (say, \(A\)), i.e. morphisms \(A^{\otimes n} \to A\). Slightly more generally, props are abstractions of all maps \(A^{\otimes n} \to A^{\otimes m}\).
 
 \begin{definition}
 	\label{def:prop}
-	A \textbf{prop} is a symmetric monoidal category where every object is of the form \(A^{\otimes n}\) for some object \(A\). Equivalently, it's a symmetric monoidal category generated by a single object.
-
-	Since props are categories, we will use a boldface capital letter to denote them. In a prop, we denote the field \(k\) by \(\mathbf{0}\), the generating object \(A\) by \(\mathbf{1}\), and the object \(A^{\otimes n}\) by \(\mathbf{n}\).
+	A \textbf{prop} is a symmetric monoidal category where every object is of the form \(A^{\otimes n}\) for some object \(A\). 
+    %TODO (Zsuzsi) could you not denote this by $A$, but use boldface 1 right away? In the next definition you denote by $A$ an algebra over a prop, and you send $!$ to $A$, which makes $A$ quite loaded.
+    Equivalently, it's a symmetric monoidal category generated by a single object.
+    Since props are categories, we use a boldface capital letter to denote them. In a prop, we denote the field \(k\) by \(\mathbf{0}\), 
+    %TODO (Zsuzsi) there is no field in a general PROP, it's just the tensor unit
+    the generating object \(A\) by \(\mathbf{1}\), and the object \(A^{\otimes n}\) by \(\mathbf{n}\).
 \end{definition}
 
 \begin{definition}
@@ -1267,26 +1296,33 @@ A step towards describing the internal structure of \(\mathcal{A}\) without spec
 		\end{tikzcd}
 	\]
 
-	The forgetful functor \(\mathcal{F}\) takes a prop \(\mathbf{P}\) to the operad whose operations are the \((\mathbf{m}, \mathbf{1})\)-ary elements of the prop (i.e. have \(m\) inputs and one output):
+	The forgetful functor \(\mathcal{F}\) takes a prop \(\mathbf{P}\) to the operad whose operations are the \((\mathbf{m}, \mathbf{1})\)-ary elements of the prop (i.e. morphisms with \(m\) inputs and one output):
 	\[\mathcal{F}(\mathbf{P})(m) = \mathbf{P}(\mathbf{m}, \mathbf{1}).\]
 	The free functor \(\mathbf{E}\) maps an operad \(\mathcal{O}\) to the prop whose \((\mathbf{m}, \mathbf{n})\)-ary morphisms are tensor products of operations from the operad:
 	\[\mathbf{E}(\mathcal{O})(\mathbf{m}, \mathbf{n}) = \bigoplus_{f: [m] \to [n]} \bigotimes_{i = 1}^{n} \mathcal{O}(|f^{-1}(i)|).\]
+    %TODO (Zsuzsi) What is $f$?
 	The prop \(\mathbf{E}(\mathcal{O})\) is also referred to as the \textbf{envelope of the operad \(\mathcal{O}\)}.
 \end{remark}
 
 \begin{proposition}
-	The notions of algebra over a prop and algebra over an operad are equivalent. \(A \in \mathcal{C}\) is an algebra over the operad \(\mathcal{O}\) if and only if it is an algebra over the prop \(\mathbf{E}(\mathcal{O})\).
+	The notions of algebra over a prop and algebra over an operad are equivalent in the sense that \(A \in \mathcal{C}\) is an algebra over the operad \(\mathcal{O}\) if and only if it is an algebra over the prop \(\mathbf{E}(\mathcal{O})\).
 \end{proposition}
 
-Now the main difference between contraction and partial composition in a prop is the marking of inputs and outputs. With metric Lie algebras, co- and contravariant indices could be contracted with the metric or casimir to invert their variance, but in a general prop there's no way to turn an input into an output.
+Now the main difference between contraction and partial composition in a prop is the marking of inputs and outputs. With metric Lie algebras, co- and contravariant indices could be contracted with the metric or casimir to invert their variance, but in a general prop there is no way to turn an input into an output.
 
-Recall that the action of the symmetric group comes from the symmetry of the symmetric monoidal category \(\mathcal{C}\). But this only permutes inputs amongst themselves, rather than permuting inputs with outputs. In a certain kind of operad, this can be achieved.
+Recall that the action of the symmetric  
+group 
+%TODO (Zsuzsi): In an operad?
+comes from the symmetry of the symmetric monoidal category \(\mathcal{C}\). But this only permutes inputs amongst themselves, rather than permuting inputs with outputs. In a certain kind of operad, called a cyclic operad, permutations of inputs with outputs can be achieved.
+%TODO (Zsuzsi): I would add something like: "effectively identifying inputs and outputs", or "erasing the differemce between inputs and outputs". Then add some motivation: "This is achieved, for example, by the metric in a Lie algebra, which allows it to be identified with its dual, or, equivalently, allows it to be contracted with itself."
 
 \begin{definition}
 	\label{def:cyclic-operad}
 	A \textbf{cyclic operad} in \(\mathcal{C}\) is an operad equipped with a cyclic structure. A \textbf{cyclic structure} is an action of each symmetric group \(S_{n + 1}\) on \(\mathcal{O}(n)\) which extends the \(S_{n}\) action on \(\mathcal{O}(n)\) and satisfies the identity below.
 
-	We define what we mean by an extension of the \(S_{n}\) action. Formally, let \(S_{n}\) be the group of permutations of the set \(\{1, \cdots, n\}\). The operad already has an action of \(S_{n}\) on each \(\mathcal{O}(n)\) which agrees with the action of the symmetry \(\tau\). Let \(S_{n}^{+} \cong S_{n + 1}\) be the group of permutations of \(\{0, \cdots n\})\), and note that the subgroup of \(S_{n}^{+}\) that fixes \(0\) is isomorphic to \(S_{n}\). We say an action of \(S_{n}^{+}\) extends the action of \(S_{n}\) if the restriction of the action to \(S_{n} \subseteq S_{n}^{+}\) agrees with the action of \(S_{n}\) on \(\mathcal{O}(n)\).
+	Firs we define what we mean by an extension of the \(S_{n}\) action. Formally, let \(S_{n}\) be the group of permutations of the set \(\{1, \cdots, n\}\). The operad already has an action of \(S_{n}\) on each \(\mathcal{O}(n)\) which agrees with the action of the symmetry \(\tau\). 
+    %TODO (Zsuzsi) What is $\tau$?
+    Let \(S_{n}^{+} \cong S_{n + 1}\) be the group of permutations of \(\{0, \cdots n\})\), and note that the subgroup of \(S_{n}^{+}\) that fixes \(0\) is isomorphic to \(S_{n}\). We say an action of \(S_{n}^{+}\) extends the action of \(S_{n}\) if the restriction of the action to \(S_{n} \subseteq S_{n}^{+}\) agrees with the action of \(S_{n}\) on \(\mathcal{O}(n)\).
 
 	Let \(\sigma_{c} \in S_{n + 1}\) denote the cyclic permutation sending \(0 \mapsto 1, 1 \mapsto 2, \cdots, n \mapsto 0\). To be a cyclic operad, the action of \(S_{n + 1}\) must satisfy the identity
 	\[(a \circ_{1} b) \sigma_{c} = (b\sigma_{c}) \circ_{n} (a\sigma_{c})\]
@@ -1305,9 +1341,11 @@ Recall that the action of the symmetric group comes from the symmetry of the sym
 		\def\svgscale{0.3}
 		\raisebox{-37pt}{\input{graphics/cyclic_operad_condition_rhs.pdf_tex}}
 	\]
-
+    %TODO (Zsuzsi) This might be more illuminating if instead of writing $\sigma_c$ you drew its action.
 	We denote a cyclic operad with underlying operad \(\mathcal{O}\) by \(\mathcal{O}^{\text{cyc}}\). This suffices because we do not consider operads with multiple cyclic structures.
 \end{definition}
+
+%TODO (Zsuzsi) Insert motivating sentence here, reiterating the inspiration from metric Lie algebras.
 
 \begin{definition}
 	\label{def:metric-algebra-over-cyclic-operad}
@@ -1325,6 +1363,8 @@ Recall that the action of the symmetric group comes from the symmetry of the sym
 		\end{shaded}
 	\end{itemize}
 \end{definition}
+%TODO (Zsuzsi) We checked this in my office at some point and I recall it's fine, once you untangle what the definition means. We can talk about it in LD.Co
+
 The conditions above can alternatively and more naturally be phrased in terms of props.
 \begin{definition}
 	\label{def:metric-envelope-of-cyclic-operad}
